--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "to-do-list",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://adrianmoratilla.github.io",
+  "homepage": "https://adrianmoratilla.github.io/todolist",
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
